--- a/Projet_Proto.ioc
+++ b/Projet_Proto.ioc
@@ -14,10 +14,15 @@ Mcu.Name=STM32F301K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PB3
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PB3
+Mcu.Pin15=PB5
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -26,7 +31,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PA8
-Mcu.PinsNb=14
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F301K8Tx
@@ -46,6 +51,21 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.Signal=S_TIM2_CH1_ETR
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=BT_2
+PA10.GPIO_PuPd=GPIO_PULLDOWN
+PA10.Locked=true
+PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=BT_3
+PA11.GPIO_PuPd=GPIO_PULLDOWN
+PA11.Locked=true
+PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA12.GPIO_Label=BT_4
+PA12.GPIO_PuPd=GPIO_PULLDOWN
+PA12.Locked=true
+PA12.Signal=GPIO_Input
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -60,6 +80,11 @@ PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.Mode=Clock-out
 PA8.Signal=RCC_MCO
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA9.GPIO_Label=BT_1
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Locked=true
+PA9.Signal=GPIO_Input
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED_3
 PB0.Locked=true
@@ -72,6 +97,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=BUZZER
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
