--- a/Projet_Proto2.ioc
+++ b/Projet_Proto2.ioc
@@ -7,9 +7,8 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM2
-Mcu.IP4=TIM16
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F301K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
@@ -19,11 +18,9 @@ Mcu.Pin11=PA10
 Mcu.Pin12=PA11
 Mcu.Pin13=PA12
 Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin15=PB5
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -32,7 +29,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PA8
-Mcu.PinsNb=20
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F301K8Tx
@@ -48,6 +45,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.Signal=S_TIM2_CH1_ETR
 PA10.GPIOParameters=GPIO_Label
@@ -92,7 +90,6 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3
 PB3.Locked=true
 PB3.Signal=GPIO_Output
-PB4.Signal=S_TIM16_CH1
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=BUZZER
 PB5.Locked=true
@@ -152,14 +149,8 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
-SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
-SH.S_TIM16_CH1.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-TIM16.Channel=TIM_CHANNEL_1
-TIM16.IPParameters=Prescaler,Period,Channel
-TIM16.Period=1000 - 1
-TIM16.Prescaler=160 -1
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-Input_Capture1_from_TI1
 USART2.BaudRate=115200
@@ -167,8 +158,6 @@ USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
